Fix list items alignmnet (if the text wraps to the next line)

--- a/src/onegov/town6/theme/styles/person.scss
+++ b/src/onegov/town6/theme/styles/person.scss
@@ -79,7 +79,7 @@ $person-email-icon: '\f0e0';
         padding-top: 1em;
 
         ul {
-            list-style: inside;
+            list-style: outside;
             margin-bottom: 0;
             margin-left: 0;
 
